# starlight

./: .coverage  .gitignore  .hub_shutdown_complete  .npmignore  CHANGELOG.md  Dockerfile  GOVERNANCE.md  LifecycleManager_baseline.js  PLUGIN_SDK.md  PROTOCOL_INTEGRITY_REPORT.md  README.md  STARLIGHT_STANDARD.md  THE_STARLIGHT_PROTOCOL_BOOK.md  VERIFICATION_CHECKLIST.md  config.json  crash_log.txt  debug_log.txt  docker-compose.yml  generate_architecture.py  hub.err  hub_main.js  hub_main_baseline.js  hub_py_output.txt  latest_blog.md  latest_blog_part3.md  latest_blog_part4.md  mission_trace.json  mission_trace_portfolio.json  package-lock.json  package.json  probe_hub.js  pyproject.toml  repair_hub.js  report.html  report_portfolio.html  roadmap.md  run_cba.bat  technical_guide.md  telemetry.json  temporal_ghosting.json  (+9 more)
.github/profile/: README.md
.github/workflows/: rust_sdk_ci.yml
cli/: __init__.py  main.py  plugins.json
cli/commands/: __init__.py  create_cmd.py  doctor_cmd.py  document_cmd.py  feature_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  nl_cmd.py  (+3 more)
docs/: CHANGELOG.md  COMPLIANCE_GUIDE.md  ORG_README.md  PLUGIN_SDK.md  SECURITY_CONFIGURATION.md  SECURITY_GUIDE.md  SECURITY_TESTING.md  STARLIGHT_COMPLETE_GUIDE.md  roadmap.md  technical_guide.md  user_guide.md
go-sdk/: LICENSE  README.md  go.mod
java-sdk/: README.md  pom.xml
launcher/: QUICKSTART.md  client.js  index.html  server.js  styles.css
python-sdk/: LICENSE  README.md  pyproject.toml
python-sdk/src/starlight_protocol/: __init__.py  sentinel_base.py
python-sdk/src/starlight_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rust-sdk/: Cargo.toml  LICENSE  README.md
rust-sdk/examples/: simple_sentinel.rs
rust-sdk/src/: auth.rs  client.rs  error.rs  lib.rs  messages.rs  sentinel.rs
schemas/: README.md  starlight.a11y.context.schema.json  starlight.action.schema.json  starlight.challenge_response.schema.json  starlight.checkpoint.schema.json  starlight.clear.schema.json  starlight.context.schema.json  starlight.context_update.schema.json  starlight.finish.schema.json  starlight.getPageContext.schema.json  starlight.hijack.schema.json  starlight.intent.schema.json  starlight.pre_check.schema.json  starlight.pulse.schema.json  starlight.registration.schema.json  starlight.resume.schema.json  starlight.sidetalk.schema.json  starlight.wait.schema.json  starlight.warp.schema.json
sdk/: starlight_sdk.py
sentinels/: a11y_sentinel.py  data_sentinel.py  janitor.py  pii_sentinel.py  pulse_sentinel.py  responsive_sentinel.py  stealth_sentinel.py  vision_sentinel.py
sips/: SIP-1.md
spec/: COMPLIANCE_TESTS.md  README.md  STARLIGHT_PROTOCOL_SPEC_v1.0.0.md
src/: browser_adapter.js  hub.js  intent.js  intent_runner.js  recorder.js  shadow_utils.js  shadow_utils.js.restored  shadow_utils_utf8.js  smart_browser_adapter.js  stealth_browser_adapter.js  stealth_driver.py  telemetry.js  warp.js  warp_sanitizer.js  webhook.js
starlight_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
starlight_sdk.egg-info/: PKG-INFO  SOURCES.txt
tck/: README.md  package.json
test/: a11y_test.html  audit_report.json  aura_test.html  captcha_test.html  chaos.html  chaos_gauntlet.html  comprehensive_test.html  consensus_test.js  cross_browser_test.js  debug_stealth.js  debug_youtube_dom.js  form_test.html  ghosting_test.js  integration_smoke.js  intent_aura.js  intent_captcha.js  intent_chaos_gauntlet.js  intent_cross_browser_verify.js  intent_debug.js  intent_form_test.js  intent_github.js  intent_google.js  intent_google_search.js  intent_hm_challenge.js  intent_integration.js  intent_mobile_test.js  intent_nli_test.js  intent_portfolio.js  intent_portfolio_v2.js  intent_recorded_2026-01-01T15-44-42-661Z.js  intent_recorded_2026-01-01T15-50-33-067Z.js  intent_recorded_2026-01-01T15-52-16-286Z.js  intent_recorded_2026-01-01T16-25-03-940Z.js  intent_recorded_2026-01-01T16-56-09-008Z.js  intent_recorded_2026-01-01T17-00-59-085Z.js  intent_recorded_2026-01-01T17-07-30-726Z.js  intent_recorded_2026-01-01T17-23-58-381Z.js  intent_recorded_2026-01-10T03-03-29-695Z.js  intent_recorded_L3z3qX.js  intent_recorded_j57qI4.js  (+23 more)
tools/: CBA_Architecture_Visualizer.html  starlight_protocol_demo.html
types/: index.d.ts
validator/: README.md  starlight_validator.js
vscode-starlight/: README.md  package.json
warps/: warp_test_2026-01-04T06-44-26-223Z.warp  warp_test_2026-01-04T06-47-59-648Z.warp
(+88 files in other folders)
