[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starlight-protocol"
version = "1.3.4"
description = "Python SDK for the Starlight Protocol - Resilient browser automation through autonomous Sentinels"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dhiraj Das", email = "dhirajdas.666@gmail.com"}
]
keywords = [
    "automation",
    "testing",
    "browser",
    "selenium",
    "playwright",
    "sentinel",
    "protocol",
    "websocket",
    "json-rpc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "websockets>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/starlight-protocol/starlight-python"
Documentation = "https://starlight-protocol.github.io/docs"
Repository = "https://github.com/starlight-protocol/starlight-python"
Issues = "https://github.com/starlight-protocol/starlight-python/issues"
Changelog = "https://github.com/starlight-protocol/starlight-python/blob/main/CHANGELOG.md"
Author = "https://dhirajdas.dev"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
