[package]
name = "starlight-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Dhiraj Das <dhirajdas.666@gmail.com>"]
description = "Rust SDK for the Starlight Protocol - An Open Standard for Autonomous Browser Automation"
license = "MIT"
repository = "https://github.com/starlight-protocol/starlight"
documentation = "https://docs.rs/starlight-sdk"
readme = "README.md"
keywords = ["starlight", "browser-automation", "websocket", "sentinel", "testing"]
categories = ["web-programming", "development-tools::testing"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket (TLS can be added via features)
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "9.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "starlight"
path = "src/lib.rs"

[[example]]
name = "simple_sentinel"
path = "examples/simple_sentinel.rs"
